fix page overflow

--- a/src/App.css
+++ b/src/App.css
@@ -142,6 +142,8 @@
   }
 
   .simple-text {
+    display: flex;
+    flex-direction: column;
     vertical-align: middle;
     line-height: 10px;
   }
